[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/fonts/lucon.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/Month1 text.gd" type="Script" id=2]
[ext_resource path="res://ui/Month2 Text.gd" type="Script" id=3]
[ext_resource path="res://ui/DateTimeDisplayer.gd" type="Script" id=4]
[ext_resource path="res://ui/main_theme.theme" type="Theme" id=5]
[ext_resource path="res://ui/timeline/button.gd" type="Script" id=6]
[ext_resource path="res://ui/timeline/timeline.gd" type="Script" id=7]
[ext_resource path="res://RightArrow.png" type="Texture" id=16]
[ext_resource path="res://LeftArrow.png" type="Texture" id=21]

[node name="Timeline" type="VBoxContainer"]
margin_right = 502.0
margin_bottom = 104.0
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="."]
margin_right = 502.0
margin_bottom = 33.0

[node name="LeftMonth" type="Label" parent="TopRow"]
margin_top = 10.0
margin_right = 114.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Month 1"
align = 1
script = ExtResource( 2 )

[node name="LeftArrow" type="Button" parent="TopRow"]
margin_left = 118.0
margin_right = 189.0
margin_bottom = 33.0
focus_mode = 0
icon = ExtResource( 21 )

[node name="DateTime" type="Label" parent="TopRow"]
margin_left = 193.0
margin_top = 10.0
margin_right = 308.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1/6/2021 00:00"
align = 1
script = ExtResource( 4 )

[node name="RightArrow" type="Button" parent="TopRow"]
margin_left = 312.0
margin_right = 383.0
margin_bottom = 33.0
focus_mode = 0
icon = ExtResource( 16 )

[node name="RightMonth" type="Label" parent="TopRow"]
margin_left = 387.0
margin_top = 10.0
margin_right = 502.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Month 2"
align = 1
script = ExtResource( 3 )

[node name="Days" type="PanelContainer" parent="."]
margin_top = 37.0
margin_right = 502.0
margin_bottom = 104.0
size_flags_vertical = 3

[node name="DaysMargin" type="MarginContainer" parent="Days"]
margin_right = 502.0
margin_bottom = 67.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="DaysHBox" type="HBoxContainer" parent="Days/DaysMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 492.0
margin_bottom = 57.0
alignment = 1

[node name="Button" type="Button" parent="Days/DaysMargin/DaysHBox"]
margin_right = 65.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 0
script = ExtResource( 6 )

[node name="Button2" type="Button" parent="Days/DaysMargin/DaysHBox"]
margin_left = 69.0
margin_right = 134.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 0
script = ExtResource( 6 )

[node name="Button3" type="Button" parent="Days/DaysMargin/DaysHBox"]
margin_left = 138.0
margin_right = 204.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 0
script = ExtResource( 6 )

[node name="Button4" type="Button" parent="Days/DaysMargin/DaysHBox"]
margin_left = 208.0
margin_right = 273.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 0
script = ExtResource( 6 )

[node name="Button5" type="Button" parent="Days/DaysMargin/DaysHBox"]
margin_left = 277.0
margin_right = 343.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 0
script = ExtResource( 6 )

[node name="Button6" type="Button" parent="Days/DaysMargin/DaysHBox"]
margin_left = 347.0
margin_right = 412.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 0
script = ExtResource( 6 )

[node name="Button7" type="Button" parent="Days/DaysMargin/DaysHBox"]
margin_left = 416.0
margin_right = 482.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 0
script = ExtResource( 6 )

[connection signal="pressed" from="TopRow/LeftArrow" to="TopRow/LeftMonth" method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="TopRow/LeftArrow" to="TopRow/DateTime" method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="TopRow/LeftArrow" to="TopRow/RightMonth" method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="TopRow/RightArrow" to="TopRow/LeftMonth" method="_on_RightArrow_pressed"]
[connection signal="pressed" from="TopRow/RightArrow" to="TopRow/DateTime" method="_on_RightArrow_pressed"]
[connection signal="pressed" from="TopRow/RightArrow" to="TopRow/RightMonth" method="_on_RightArrow_pressed"]
[connection signal="pressed" from="Days/DaysMargin/DaysHBox/Button" to="TopRow/DateTime" method="_on_Button_pressed"]
[connection signal="pressed" from="Days/DaysMargin/DaysHBox/Button2" to="TopRow/DateTime" method="_on_Button2_pressed"]
[connection signal="pressed" from="Days/DaysMargin/DaysHBox/Button3" to="TopRow/DateTime" method="_on_Button3_pressed"]
[connection signal="pressed" from="Days/DaysMargin/DaysHBox/Button4" to="TopRow/DateTime" method="_on_Button4_pressed"]
[connection signal="pressed" from="Days/DaysMargin/DaysHBox/Button5" to="TopRow/DateTime" method="_on_Button5_pressed"]
[connection signal="pressed" from="Days/DaysMargin/DaysHBox/Button6" to="TopRow/DateTime" method="_on_Button6_pressed"]
[connection signal="pressed" from="Days/DaysMargin/DaysHBox/Button7" to="TopRow/DateTime" method="_on_Button7_pressed"]
